--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -19,17 +16,11 @@
                 <img src="img/logo.png" alt="Trillo logo" class="logo" />
 
                 <form action="#" class="search">
-                    <input
-                        type="text"
-                        class="search__input"
-                        placeholder="Search hotels"
-                    />
+                    <input type="text" class="search__input" placeholder="Search hotels" />
 
                     <button class="search__button">
                         <svg class="search__icon">
-                            <use
-                                xlink:href="img/sprite.svg#icon-magnifying-glass"
-                            ></use>
+                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
                         </svg>
                     </button>
                 </form>
@@ -37,9 +28,7 @@
                 <nav class="user-nav">
                     <div class="user-nav__icon-box">
                         <svg class="user-nav__icon">
-                            <use
-                                xlink:href="img/sprite.svg#icon-bookmark"
-                            ></use>
+                            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
                             <span class="user-nav__notification">7</span>
                         </svg>
                     </div>
@@ -52,11 +41,7 @@
                     </div>
 
                     <div class="user-nav__user">
-                        <img
-                            src="img/user.jpg"
-                            alt="User photo"
-                            class="user-nav__user-photo"
-                        />
+                        <img src="img/user.jpg" alt="User photo" class="user-nav__user-photo" />
 
                         <span class="user-nav__user-name">Truong</span>
                     </div>
@@ -69,9 +54,7 @@
                         <li class="side-nav__item side-nav__item-active">
                             <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
-                                    <use
-                                        xlink:href="img/sprite.svg#icon-home"
-                                    ></use>
+                                    <use xlink:href="img/sprite.svg#icon-home"></use>
                                 </svg>
                                 <span>Hotel</span>
                             </a>
@@ -80,9 +63,7 @@
                         <li class="side-nav__item">
                             <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
-                                    <use
-                                        xlink:href="img/sprite.svg#icon-aircraft-take-off"
-                                    ></use>
+                                    <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
                                 </svg>
                                 <span>Flight</span>
                             </a>
@@ -91,9 +72,7 @@
                         <li class="side-nav__item">
                             <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
-                                    <use
-                                        xlink:href="img/sprite.svg#icon-key"
-                                    ></use>
+                                    <use xlink:href="img/sprite.svg#icon-key"></use>
                                 </svg>
                                 <span>Car rental</span>
                             </a>
@@ -102,21 +81,146 @@
                         <li class="side-nav__item">
                             <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
-                                    <use
-                                        xlink:href="img/sprite.svg#icon-map"
-                                    ></use>
+                                    <use xlink:href="img/sprite.svg#icon-map"></use>
                                 </svg>
                                 <span>Tours</span>
                             </a>
                         </li>
                     </ul>
 
-                    <div class="legal">
-                        &copy; 2022 by trillo. All rights reserved
-                    </div>
+                    <div class="legal">&copy; 2022 by trillo. All rights reserved</div>
                 </nav>
 
-                <main class="hotel-view">Hotel view</main>
+                <main class="hotel-view">
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="img/hotel-1.jpg" alt="Photo of hotel 1" class="gallery__photo" />
+                        </figure>
+
+                        <figure class="gallery__item">
+                            <img src="img/hotel-2.jpg" alt="Photo of hotel 2" class="gallery__photo" />
+                        </figure>
+
+                        <figure class="gallery__item">
+                            <img src="img/hotel-3.jpg" alt="Photo of hotel 3" class="gallery__photo" />
+                        </figure>
+                    </div>
+
+                    <div class="overview">
+                        <h1 class="overview__heading">Hotel Las Palmas</h1>
+
+                        <div class="overview__stars">
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="img/sprite.svg#icon-star"></use>
+                            </svg>
+                        </div>
+
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+                            </svg>
+                            <button class="btn-inline">Albufeira, Portugal</button>
+                        </div>
+
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
+                        </div>
+                    </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                I promise you are going to enjoy your stay here in Albufeira. This is a beautiful, quiet
+                                city where you can relax, sit by the beach, enjoy great meals and feel very safe. You
+                                can walk into town and enjoy the fountains or take a moonlit walk along the water.
+                            </p>
+
+                            <p class="paragraph">
+                                Enjoy your vacation, but do drink responsibly and do not drink and drive.
+                            </p>
+
+                            <ul class="list">
+                                <li class="list__item">Close to the beach</li>
+                                <li class="list__item">Breakfast included</li>
+                                <li class="list__item">Free airport shuttle</li>
+                                <li class="list__item">Free wifi in all rooms</li>
+                                <li class="list__item">Air conditioning and heating</li>
+                                <li class="list__item">Pets allowed</li>
+                                <li class="list__item">We speak all languages</li>
+                                <li class="list__item">Perfect for families</li>
+                            </ul>
+
+                            <div class="recommend">
+                                <p class="recommend__count">Lucy and 3 other friends recommend this hotel.</p>
+
+                                <div class="recommend_friends">
+                                    <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo" />
+                                    <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo" />
+                                    <img src="img/user-5.jpg" alt="Friend 3" class="recommend__photo" />
+                                    <img src="img/user-6.jpg" alt="Friend 4" class="recommend__photo" />
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="user-reviews">
+                            <figture class="review">
+                                <blockquote class="review__text">
+                                    The atmosphere is so special that it really felt like home to all of us. All respect
+                                    for Nico who does a great job there; a true sample of excellent tour guide!
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-1.jpg" alt="User" class="review__photo" />
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-data">Feb 23rd, 2022</p>
+                                    </div>
+                                    <div class="review__rating">7.8</div>
+                                </figcaption>
+                            </figture>
+
+                            <figture class="review">
+                                <blockquote class="review__text">
+                                    An excellent tour with more than just an overview of Riga. Old town is fascinating
+                                    with some great stories and ideas for further exploring. Art Nouveau district is a
+                                    gem! The real treat was the markets with a great introduction to this mammoth
+                                    market. Highly recommend
+                                </blockquote>
+                                <figcaption class="review__user">
+                                    <img src="img/user-2.jpg" alt="User" class="review__photo" />
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Mary Thomas</p>
+                                        <p class="review__user-data">Sept 13th, 2022</p>
+                                    </div>
+                                    <div class="review__rating">9.3</div>
+                                </figcaption>
+                            </figture>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span></button>
+                        </div>
+                    </div>
+
+                    <div class="cta">
+                        <h2 class="cta__booking-now">Good news! We have 4 free rooms for your selected dates!</h2>
+
+                        <button class="btn">
+                            <span class="btn__visible">Book Now</span>
+                            <span class="btn__invisible">Only 4 rooms left</span>
+                        </button>
+                    </div>
+                </main>
             </div>
         </div>
     </body>
