adding bookmark notification

--- a/index.html
+++ b/index.html
@@ -26,11 +26,42 @@
                 </form>
 
                 <nav class="user-nav">
-                    <div class="user-nav__icon-box">
+                    <div class="user-nav__icon-box bookmark">
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-bookmark"></use>
                             <span class="user-nav__notification">7</span>
                         </svg>
+                        <div class="bookmark-active">
+                            <ul class="bookmark-active__list">
+                                <li class="bookmark-active__item">
+                                    <a class="bookmark-active__link">
+                                        <img src="img/user-7.jpg" alt="User" class="bookmark-active__img" />
+                                        <span class="bookmark-active__text">Jonas likes your reviews</span>
+                                    </a>
+                                </li>
+
+                                <li class="bookmark-active__item">
+                                    <a class="bookmark-active__link">
+                                        <img src="img/user-7.jpg" alt="User" class="bookmark-active__img" />
+                                        <span class="bookmark-active__text">Jonas likes your reviews</span>
+                                    </a>
+                                </li>
+
+                                <li class="bookmark-active__item">
+                                    <a class="bookmark-active__link">
+                                        <img src="img/user-7.jpg" alt="User" class="bookmark-active__img" />
+                                        <span class="bookmark-active__text">Jonas likes your reviews</span>
+                                    </a>
+                                </li>
+
+                                <li class="bookmark-active__item">
+                                    <a class="bookmark-active__link">
+                                        <img src="img/user-7.jpg" alt="User" class="bookmark-active__img" />
+                                        <span class="bookmark-active__text">Jonas likes your reviews</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                     <div class="user-nav__icon-box">
